--- a/VacationManager/Web.csproj
+++ b/VacationManager/Web.csproj
@@ -27,6 +27,10 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Roles\" />
+  </ItemGroup>
+
 
 
 </Project>
